fixed luminance animation on mobile

--- a/src/client/style/index.css
+++ b/src/client/style/index.css
@@ -328,6 +328,9 @@ textarea {
 }
 
 @media (max-width: 650px) {
+  .header-component {
+    height: 50%;
+  }
   .menu {
     display: none;
     flex-direction: column;
